--- a/src/scss/parts/_buttons.scss
+++ b/src/scss/parts/_buttons.scss
@@ -12,7 +12,8 @@
    text-align: center;
    text-decoration: none;
    transform: translate3d(0, 0, 0);
-   transition: all .3s;
+   transition-property: transform opacity;
+   transition-duration: $animation-duration;
    user-select: none;
    appearance: none;
    -webkit-user-select: none;
@@ -27,7 +28,7 @@
                   0 1px 4px rgba(0, 0, 0, .05);
       opacity: 1;
       transform: translateY(0);
-      transition-duration: .35s;
+     
       
       &:after {
          opacity: .5;
@@ -39,7 +40,7 @@
                   0 0 10px 0 rgba(0, 0, 0, .1), 
                   0 1px 4px -1px rgba(0, 0, 0, .1);
       transform: translateY(2px);
-      transition-duration: .35s;
+     
 
       &:after {
          opacity: 1;
