--- a/src/scss/parts/_section.scss
+++ b/src/scss/parts/_section.scss
@@ -3,9 +3,11 @@
    padding: 40px 0;
    @each $color in map-keys($theme-colors) {
       &-#{$color} {
-         @include set-colors(map-get($theme-colors, $color), 0%);
-   
-        
+         @include set-colors(map-get($theme-colors, $color), 0%);       
       }
+   }
+
+   &-collapse {
+      padding: 0;
    }
 }
