--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,8 @@
 $light:                              #f2f2f2 !default;
 $dark:                               #2e2e2e !default;
 
-$primary:                            #29c9f1 !default;
-$secondary:                          #19181b !default;
+$primary:                            #5480b6 !default;
+$secondary:                          #181b1a !default;
 $success:                            #229b7a !default;
 $warning:                            #ff5e00 !default;
 $muted:                              #e4e4e4 !default;
