--- a/src/scss/custom/toolbar.scss
+++ b/src/scss/custom/toolbar.scss
@@ -4,9 +4,15 @@
 
     & > *[class^="toolbar__"] {
       @extend .toolbar;
+      cursor: pointer;
       
       & > span {
          margin-right: 5px;
+
+         &:hover {
+          color: aliceblue;
+          
+         }
       }
 
       &:not(:last-child) {
