--- a/src/scss/parts/_section.scss
+++ b/src/scss/parts/_section.scss
@@ -1,6 +1,8 @@
 .section {
    position: relative;
    padding: 40px 0;
+   max-width: 100%;
+   
    @each $color in map-keys($theme-colors) {
       &-#{$color} {
          @include set-colors(map-get($theme-colors, $color), 0%);
