--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -48,13 +48,13 @@ a  {
    text-decoration: none;
 }
 
-::-webkit-scrollbar {
-   width: 6px;
-   border-radius: 10px;
-}
+// ::-webkit-scrollbar {
+//    width: 6px;
+//    border-radius: 10px;
+// }
 
-::-webkit-scrollbar-thumb {
-   position: absolute;
-   background-color: rgba(21, 20, 26, 0.63);
-   border-radius: 10px;
-}
+// ::-webkit-scrollbar-thumb {
+//    position: absolute;
+//    background-color: rgba(21, 20, 26, 0.4);
+//    border-radius: 10px;
+// }
