--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -86,18 +86,19 @@ $width-values: (
 ) !default;
 
 $height-values: (
-   20:   20vh,
-   25:   25vh,
-   33:   33.33vh,
-   40:   40vh,
-   50:   50vh,
-   66:   66.66vh,
-   75:   75vh,
-   90:   90vh,
-   95:   95vh,
-   100:  100vh,
-   s:    200px,
-   m:    300px,
-   l:    450px,
-   full: 100%,
+   20vh:   20vh,
+   25vh:   25vh,
+   33vh:   33.33vh,
+   40vh:   40vh,
+   50vh:   50vh,
+   66vh:   66.66vh,
+   75vh:   75vh,
+   90vh:   90vh,
+   95vh:   95vh,
+   100vh:  100vh,
+   s:      200px,
+   m:      300px,
+   l:      450px,
+   lg:     650px,
+   full:   100%,
 ) !default;
