--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -18,7 +18,7 @@ body {
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
-
+  // transition-timing-function: ease;
    &.scroll-disable {
       overflow: hidden;
    }
