--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,9 +4,9 @@
    flex-direction: $direction;
 }
 
-@mixin justify-align-all($direction: flex-start) {
-   justify-content: $direction;
-   align-items: $direction;
+@mixin flex-align($direction: flex-start) {
+  justify-content: $direction;
+  align-items: $direction;
 }
 
 @mixin justify-align($justify: flex-start, $align: flex-start) {
@@ -36,7 +36,6 @@
    }
 }
 
-
 //border
 @mixin set-border ($value: _, $color: #ccc, $width: 1px){
   @if $value == _ {
@@ -46,6 +45,7 @@
   }
 }
 
+//outline
 @mixin set-outline ($value: _, $color: #ccc, $width: 1px){
   @if $value == _ {
     outline: solid $width $color;
@@ -53,7 +53,6 @@
     outline-#{$value}: solid $width $color;
   }
 }
-
 
 //fonts
 @mixin font($weight: 400, $size: 22px, $style: normal) {
@@ -70,4 +69,12 @@
 //animation
 @mixin animate($duration: 0.3s) {
    transition: all $duration ease-in-out;
+}
+
+//transform
+@mixin absolute-center(){
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
