--- a/src/scss/parts/_nav.scss
+++ b/src/scss/parts/_nav.scss
@@ -14,7 +14,7 @@ nav {
 
    &__item {
       @include display-flex;
-      @include justify-align-all(center);
+      @include flex-align(center);
       padding: 5px;
       width: 40px;
       height: 40px;
