--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 $light:                              #f2f2f2 !default;
 $dark:                               #2e2e2e !default;
 
-$primary:                            #5da6ce !default;
+$primary:                            #548cd2 !default;
 $secondary:                          #181b1a !default;
 $success:                            #229b7a !default;
 $warning:                            #ff5e00 !default;
