--- a/src/scss/custom/header.scss
+++ b/src/scss/custom/header.scss
@@ -7,12 +7,12 @@
     border-width: 1px;
     border-color: transparentize($dark, 0.7);
     border-style: solid;
-    border-radius: 8px;
+    border-radius: 10px;
     font-size: 16px;
     font-weight: 500;
     padding: 8px 16px 6px;
     color: $dark;
-    background-color: $light;
+    background-color: tint($light, 80);
     box-shadow: 0 0 0 2px rgba(134, 140, 160, 0.02);
 
     &:hover {
