--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,8 +7,6 @@ $success:                            #229b7a !default;
 $warning:                            #ff5e00 !default;
 $muted:                              #e4e4e4 !default;
 $danger:                             #9d3a3a !default;
-$disable:                            #808191 !default;
-$disable-bg:                         #353340 !default;
 
 $breakpoint-small:                   640px !default;  // Phone landscape
 $breakpoint-medium:                  960px !default;  // Tablet Landscape
@@ -16,89 +14,101 @@ $breakpoint-large:                   1200px !default; // Desktop
 $breakpoint-xlarge:                  1600px !default; // Large Screens
 
 $animation-duration:                 150ms !default;
+$global-border-radius:               10px;
 
+//font-size
 $standart:                           0.875rem !default;
 $small:                              0.7rem !default;
 
 $breakpoints: (
-   s:           $breakpoint-small,
-   m:           $breakpoint-medium,
-   l:           $breakpoint-large,
-   xl:          $breakpoint-xlarge,
+  s:           $breakpoint-small,
+  m:           $breakpoint-medium,
+  l:           $breakpoint-large,
+  xl:          $breakpoint-xlarge,
 ) !default;
 
 
 $theme-colors: (
-   primary:     $primary,
-   secondary:   $secondary,
-   success:     $success,
-   warning:     $warning,
-   danger:      $danger,
-   muted:       $muted,
-   light:       $light,
-   dark:        $dark,
-
+  primary:     $primary,
+  secondary:   $secondary,
+  success:     $success,
+  warning:     $warning,
+  danger:      $danger,
+  muted:       $muted,
+  light:       $light,
+  dark:        $dark,
 ) !default;
 
 
 $spacing: (
-   1:   1px,
-   2:   2px,
-   3:   3px,
-   4:   4px,
-   5:   5px,
-   6:   6px,
-   7:   7px,
-   8:   8px,
-   9:   9px,
-   10:  10px,
-   15:  15px,
-   20:  20px,
-   25:  25px,
-   30:  30px,
-   35:  35px,
-   40:  40px,
-   45:  45px,
-   50:  50px,
+  1:   1px,
+  2:   2px,
+  3:   3px,
+  4:   4px,
+  5:   5px,
+  6:   6px,
+  7:   7px,
+  8:   8px,
+  9:   9px,
+  10:  10px,
+  15:  15px,
+  20:  20px,
+  25:  25px,
+  30:  30px,
+  35:  35px,
+  40:  40px,
+  45:  45px,
+  50:  50px,
 ) !default;
 
 $gaps: (
-   s:   15px,
-   m:   20px,
-   l:   30px,
-   xl:  40px,
+  s:   15px,
+  m:   20px,
+  l:   30px,
+  xl:  40px,
 ) !default;
 
 $width-values: (
-   20:  20%,
-   25:  25%,
-   33:  33.33%,
-   40:  40%,
-   50:  50%,
-   70:  70%,
-   75:  75%,
-   66:  66.66%,
-   100: 100%,
-   xs:  150px,
-   s:   200px,
-   m:   300px,
-   l:   450px,
+  20:  20%,
+  25:  25%,
+  33:  33.33%,
+  40:  40%,
+  50:  50%,
+  70:  70%,
+  75:  75%,
+  66:  66.66%,
+  100: 100%,
+  xs:  150px,
+  s:   200px,
+  m:   300px,
+  l:   450px,
 ) !default;
 
 $height-values: (
-   20vh:   20vh,
-   25vh:   25vh,
-   33vh:   33.33vh,
-   40vh:   40vh,
-   50vh:   50vh,
-   66vh:   66.66vh,
-   75vh:   75vh,
-   90vh:   90vh,
-   95vh:   95vh,
-   100vh:  100vh,
-   s:      200px,
-   m:      300px,
-   l:      450px,
-   lg:     650px,
-   full:   100%,
+  20:     20%,
+  25:     25%,
+  33:     33.33%,
+  30:     30%,
+  40:     40%,
+  50:     50%,
+  66:     66.66%,
+  75:     75%,
+  90:     90%,
+  95:     95%,
+  100:    100%,
+  20vh:   20vh,
+  25vh:   25vh,
+  33vh:   33.33vh,
+  30vh:   30vh,
+  40vh:   40vh,
+  50vh:   50vh,
+  66vh:   66.66vh,
+  75vh:   75vh,
+  90vh:   90vh,
+  95vh:   95vh,
+  100vh:  100vh,
+  s:      200px,
+  m:      300px,
+  l:      450px,
+  lg:     650px
 ) !default;
