--- a/src/scss/custom/slider.scss
+++ b/src/scss/custom/slider.scss
@@ -10,8 +10,7 @@
     @include display-flex;
     @include flex-no-wrap;
     padding: 0 !important;
-    
-    
+
     > div {
       position: relative;
       flex: none;
@@ -34,13 +33,13 @@
 
   &-nav {
     span {
+      @include display-flex;
+      @include flex-align(center);
       position: absolute;
-      display: block;
       top: 50%;
-      width: 30px;
-      height: 30px;
-      background-color: $success;
+      color: $light;
       transform: translateY(-50%);
+      cursor: pointer;
 
       &.left {
         left: 10px;
@@ -50,6 +49,23 @@
         right: 10px;
       }
     }
-    
+  }
+
+  &-dotnav {
+    position: relative;
+    margin: 10px 0;
+    gap: 10px;
+
+    li {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background-color: $muted;
+      cursor: pointer;
+
+      &.active {
+        background-color: shade($muted, 20);
+      }
+    }
   }
 }
