--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,9 +1,8 @@
 /* color palette from <https://github.com/vuejs/theme> */
 
-*,
-*::before,
-*::after {
+* {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-weight: normal;
   outline: none;
