--- a/src/scss/parts/_card.scss
+++ b/src/scss/parts/_card.scss
@@ -2,13 +2,41 @@
   position: relative;
   @include display-flex(column);
   width: 100%;
-  border-radius: $global-border-radius;
   cursor: default;
 
+  &-default {
+    color: $dark;
+    background-color: #fff;
+  }
+  &-h {
+    flex-direction: row;
+  }
   &-media {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
     img,
     video {
       width: 100%;
+      height: auto;
+    }
+
+    &.cover-container {
+      overflow: hidden;
+      position: relative;
+
+      [pnz-cover] {
+        max-width: none;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    &.small {
+      max-width: 140px;
     }
   }
 
@@ -31,27 +59,38 @@
 
   &__title {
     display: inline;
-    // max-width: 80%;
-    font-size: 1.2rem;
+    text-transform: uppercase;
+    font-size: 1rem;
     font-weight: 600;
     overflow-wrap: break-word;
+
+    a {
+      @extend .card__title;
+    }
   }
 
   &__text {
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     overflow-wrap: break-word;
-    margin-top: 5px;
+    margin-top: -1px;
+    line-height: 1.1;
+  }
+
+  &__time {
+    font-size: 0.9rem;
+    font-weight: 500;
   }
 
   &__badge {
     position: absolute;
-    max-width: 30%;
+    max-width: 80%;
     top: 10px;
     right: 10px;
     padding: 3px 10px;
     border-radius: 4px;
     font-size: $small;
     text-transform: uppercase;
+    background-color: rgba(240, 248, 255, 0.201);
 
     @media (min-width: $breakpoint-medium) {
       top: 15px;
@@ -65,6 +104,10 @@
         @include set-colors(map-get($theme-colors, $color), 0%);
       }
     }
+  }
+
+  &-shadow {
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
   }
 
   @each $color in map-keys($theme-colors) {
