--- a/src/scss/parts/_alert.scss
+++ b/src/scss/parts/_alert.scss
@@ -1,5 +1,6 @@
 .alert-container {
   position: fixed;
+  width: 200px;
   top: 0;
   left: 50%;
   font-size: 14px;
@@ -9,17 +10,19 @@
 .alert {
   position: relative;
   display: block;
-  padding: 1em;
+  padding: 0.7em 1em;
   font-size: 1em;
   font-weight: 500;
-  top: 0;
   margin-top: 0.5em;
-  margin-bottom: 0.5em;
   overflow: hidden;
   transition: all 300ms ease;
 
+  #{&}-text {
+    padding-right: 1.2em;
+  }
+
   &.open {
-    top: -50px;
+    margin-top: -50px;
     opacity: 0;
   }
 
