--- a/src/scss/parts/index.scss
+++ b/src/scss/parts/index.scss
@@ -3,7 +3,9 @@
 @import 'grid';
 @import 'nav';
 @import 'card';
+@import 'card-video';
 @import 'input';
 @import 'table';
 @import 'buttons';
+@import 'panel';
 @import 'alert';
