--- a/src/scss/parts/_card.scss
+++ b/src/scss/parts/_card.scss
@@ -1,28 +1,27 @@
 .card {
   position: relative;
   @include display-flex(column);
-  width: 100%;
   cursor: default;
 
   &-default {
     color: $dark;
     background-color: #fff;
   }
+
   &-h {
     flex-direction: row;
   }
+
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
+
   &-media {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 
-    img,
-    video {
-      width: 100%;
-      height: auto;
-    }
-
-    &.cover-container {
+    &.cover {
       overflow: hidden;
       position: relative;
 
@@ -57,16 +56,12 @@
     align-items: center;
   }
 
-  &__title {
+  #{&}__title {
     display: inline;
     text-transform: uppercase;
     font-size: 1rem;
     font-weight: 600;
     overflow-wrap: break-word;
-
-    a {
-      @extend .card__title;
-    }
   }
 
   &__text {
