--- a/src/scss/parts/_table.scss
+++ b/src/scss/parts/_table.scss
@@ -1,42 +1,42 @@
 .hd-table {
-   display: table;
-   width: 100%;
-   border-collapse: collapse;
-   border-spacing: 0;
+  display: table;
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
 
-   th.shrink-w {
-      width: 1px;
-      text-align: center;
-   }
+  th.shrink-w {
+    width: 1px;
+    text-align: center;
+  }
 
-   .expand-w {
-      min-width: 50px;
-   }
+  .expand-w {
+    min-width: 50px;
+  }
 
-   th,
-   td {
-      display: table-cell;
-      padding: 5px 10px;
-      text-align: left;
-   }
-   th {
-      font-weight: 500;
-   }
-   
-   tbody {
-      tr {
-         border-top: 1px solid mix(#000000, $muted, 30);
-         cursor: default;
+  th,
+  td {
+    display: table-cell;
+    padding: 5px 10px;
+    text-align: left;
+  }
+  th {
+    font-weight: 500;
+  }
 
-         &:hover {
-            background-color: $secondary;
-         }
+  tbody {
+    tr {
+      border-top: 1px solid shade($muted, 30%);
+      cursor: default;
+
+      &:hover {
+        background-color: $secondary;
       }
-   }
+    }
+  }
 
-   &.dark-mode {
-      tbody tr:hover {
-         @include dark-theme-color;
-      }
-   }
+  &.dark-mode {
+    tbody tr:hover {
+      @include dark-theme-color;
+    }
+  }
 }
